Fix alignment of time giving digital care section

--- a/styles.css
+++ b/styles.css
@@ -2031,7 +2031,7 @@ footer img {
     padding: 0;
     position: absolute;
     top:  53rem; 
-    left: 25rem;
+    left: 23.8rem;
     transform:translate(-50%,-50%);
     font-size: 2.25em; 
     text-transform:uppercase;
